--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   text-align: center;
   font-family: 'Nunito', sans-serif;
@@ -16,7 +15,16 @@ h2 {
   margin: 8px auto;
 }
 
-.start-btn{
+input,
+textarea,
+button,
+select,
+a,
+div {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.start-btn {
   margin: 5% auto 10%;
   text-align: center;
   font-weight: bold;
@@ -33,7 +41,6 @@ h2 {
   outline: none;
   font-size: 2rem;
 }
-
 
 .board {
   display: block;
@@ -70,32 +77,27 @@ h2 {
   background-color: yellow;
 }
 
-.to-press{
+.to-press {
   background-color: rgba(255, 8, 0, 0.5);
 }
 
 .pressed {
   opacity: 0.3;
-  box-shadow: 0 0  10px 5px rgba(0,0,255,1);
+  box-shadow: 0 0 10px 5px rgba(0, 0, 255, 1);
 }
 
 .gameOver {
   background-color: #DA2A24;
 }
 
-.gameOver-title {
-  font-size: 5rem;
-}
-
-
 @media only screen and (max-device-width: 768px) {
-
-  h1{
-    font-size: 7rem;
+  h1 {
+    padding-top: 5%;
+    font-size: 6rem;
   }
 
   h2 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
 
   .start-btn {
